// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scoreStock — fixture 'HDFCBANK' > produces a deterministic ScoreResult snapshot for HDFCBANK 1`] = `
{
  "inputHash": "2106347d5b9d16fef7125b1a2615f413863e2c0a2f18eddce0dcd343efd6f1d4",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "5.9750",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "6.0000",
          "rawValue": 17,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "5.2000",
          "rawValue": 19,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "0.0000",
          "rawValue": 7.2,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "7.6000",
          "rawValue": 16,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "10.0000",
          "rawValue": 19,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "10.0000",
          "rawValue": 28,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.0913",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "6.5600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "8.0000",
          "rawValue": 18,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "8.0000",
          "rawValue": 2.7,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "8.0000",
          "rawValue": 1,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "6.0000",
          "rawValue": 12,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "2.8000",
          "rawValue": 1,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.3120",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "8.9125",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 2400,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "10.0000",
          "rawValue": 2200,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "8.7500",
          "rawValue": 55,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "10.0000",
          "rawValue": 1.2,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "10.0000",
          "rawValue": 2600,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.05,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.1,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 1,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.7825",
    },
    {
      "fallbackReason": "NO_SENTIMENT_DATA_PRE_PHASE_6",
      "isFallback": true,
      "pillar": "sentiment",
      "pillarScore": "5.0000",
      "subFactors": [],
      "weight": "0.1000",
      "weightedContribution": "0.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "5.1600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "7.2000",
          "rawValue": 0.22,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "6.0000",
          "rawValue": -0.18,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "7.2000",
          "rawValue": 80,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.5160",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 6.6,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreStock — fixture 'INFY' > produces a deterministic ScoreResult snapshot for INFY 1`] = `
{
  "inputHash": "848686e005e9f8b6b362f2e9cff96c012d965af360c1bae479956036a6f0c526",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "7.3000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "10.0000",
          "rawValue": 32,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "10.0000",
          "rawValue": 39,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "10.0000",
          "rawValue": 0.05,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "4.2000",
          "rawValue": 12,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "5.2000",
          "rawValue": 14,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "10.0000",
          "rawValue": 24,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.5550",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "4.4000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "4.8000",
          "rawValue": 25,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "3.6000",
          "rawValue": 4,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "4.8000",
          "rawValue": 1.5,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "4.8000",
          "rawValue": 14,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "4.0000",
          "rawValue": 1.2,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "0.8800",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "8.0250",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 1450,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "8.0000",
          "rawValue": 1380,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "7.5000",
          "rawValue": 60,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "10.0000",
          "rawValue": 1,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "7.0000",
          "rawValue": 1550,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.08,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.12,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 0.9,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.6050",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "sentiment",
      "pillarScore": "6.3500",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "last30dAggregate",
          "normalisedScore": "6.5000",
          "rawValue": 6.5,
          "source": "sentiment.last30dAggregate",
          "weightWithinPillar": "0.7000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "analystConsensus",
          "normalisedScore": "6.0000",
          "rawValue": 6,
          "source": "sentiment.analystConsensus",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.6350",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "5.1600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "7.2000",
          "rawValue": 0.22,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "6.0000",
          "rawValue": -0.18,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "7.2000",
          "rawValue": 80,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.5160",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 6.6,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreStock — fixture 'ITC' > produces a deterministic ScoreResult snapshot for ITC 1`] = `
{
  "inputHash": "0a14dcc6ddbe9fe14cf1be0168183e4a5e82de57042186bd53f87ec04eb6257d",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "6.8250",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "10.0000",
          "rawValue": 28,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "10.0000",
          "rawValue": 35,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "10.0000",
          "rawValue": 0.02,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "2.8000",
          "rawValue": 9,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "2.8000",
          "rawValue": 10,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "10.0000",
          "rawValue": 32,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.3888",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "2.9600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "4.8000",
          "rawValue": 26,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "0.0000",
          "rawValue": 6.5,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "0.0000",
          "rawValue": 2,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "0.0000",
          "rawValue": 18,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "10.0000",
          "rawValue": 3.2,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "0.5920",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "8.9125",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 2400,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "10.0000",
          "rawValue": 2200,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "8.7500",
          "rawValue": 55,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "10.0000",
          "rawValue": 1.2,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "10.0000",
          "rawValue": 2600,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.05,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.1,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 1,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.7825",
    },
    {
      "fallbackReason": "NO_SENTIMENT_DATA_PRE_PHASE_6",
      "isFallback": true,
      "pillar": "sentiment",
      "pillarScore": "5.0000",
      "subFactors": [],
      "weight": "0.1000",
      "weightedContribution": "0.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "5.1600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "7.2000",
          "rawValue": 0.22,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "6.0000",
          "rawValue": -0.18,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "7.2000",
          "rawValue": 80,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.5160",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 6.2,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreStock — fixture 'MARUTI' > produces a deterministic ScoreResult snapshot for MARUTI 1`] = `
{
  "inputHash": "c08a60aa24dcc7dacc3b1d72b8aa477c80e89980727ea8e89af3a3871424587e",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "3.6500",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "4.0000",
          "rawValue": 14,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "4.2000",
          "rawValue": 18,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "10.0000",
          "rawValue": 0.1,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "0.0000",
          "rawValue": 6,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "0.0000",
          "rawValue": 8,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "2.0000",
          "rawValue": 9,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "1.2775",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "4.4000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "4.8000",
          "rawValue": 25,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "3.6000",
          "rawValue": 4,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "4.8000",
          "rawValue": 1.5,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "4.8000",
          "rawValue": 14,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "4.0000",
          "rawValue": 1.2,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "0.8800",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "6.6250",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 11200,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "8.0000",
          "rawValue": 11000,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "9.5000",
          "rawValue": 48,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "2.0000",
          "rawValue": -0.3,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "7.0000",
          "rawValue": 11800,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "5.0000",
          "rawValue": -0.02,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "5.0000",
          "rawValue": 0.04,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 1.1,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.3250",
    },
    {
      "fallbackReason": "NO_SENTIMENT_DATA_PRE_PHASE_6",
      "isFallback": true,
      "pillar": "sentiment",
      "pillarScore": "5.0000",
      "subFactors": [],
      "weight": "0.1000",
      "weightedContribution": "0.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "5.1600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "7.2000",
          "rawValue": 0.22,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "6.0000",
          "rawValue": -0.18,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "7.2000",
          "rawValue": 80,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.5160",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 4.9,
  "scoringEngineVersion": "0.1.0",
  "verdict": "WEAK_SCORE",
}
`;

exports[`scoreStock — fixture 'RELIANCE' > produces a deterministic ScoreResult snapshot for RELIANCE 1`] = `
{
  "inputHash": "46b8bb1e94a1aa99eb000220a5ac06182894b28e571095851aab00aaf8f88021",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "6.2250",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "6.4000",
          "rawValue": 18,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "7.2000",
          "rawValue": 22,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "8.0000",
          "rawValue": 0.4,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "6.4000",
          "rawValue": 14,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "6.4000",
          "rawValue": 16,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "6.4000",
          "rawValue": 17,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.1788",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "4.4000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "4.8000",
          "rawValue": 25,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "3.6000",
          "rawValue": 4,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "4.8000",
          "rawValue": 1.5,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "4.8000",
          "rawValue": 14,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "4.0000",
          "rawValue": 1.2,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "0.8800",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "8.9125",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 2400,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "10.0000",
          "rawValue": 2200,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "8.7500",
          "rawValue": 55,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "10.0000",
          "rawValue": 1.2,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "10.0000",
          "rawValue": 2600,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.05,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.1,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 1,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.7825",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "sentiment",
      "pillarScore": "6.8500",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "last30dAggregate",
          "normalisedScore": "7.0000",
          "rawValue": 7,
          "source": "sentiment.last30dAggregate",
          "weightWithinPillar": "0.7000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "analystConsensus",
          "normalisedScore": "6.5000",
          "rawValue": 6.5,
          "source": "sentiment.analystConsensus",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.6850",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "5.1600",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "7.2000",
          "rawValue": 0.22,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "6.0000",
          "rawValue": -0.18,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "7.2000",
          "rawValue": 80,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.5160",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 6.5,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreStock — fixture 'SUNPHARMA' > produces a deterministic ScoreResult snapshot for SUNPHARMA 1`] = `
{
  "inputHash": "1b81ed02d85f792b5c299a2d4524cbc525833fa2d5276676d51ff03e405d002c",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "fundamentals",
      "pillarScore": "5.5250",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roeTtm",
          "normalisedScore": "5.2000",
          "rawValue": 16,
          "source": "fundamentals.roeTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "roceTtm",
          "normalisedScore": "5.2000",
          "rawValue": 19,
          "source": "fundamentals.roceTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "debtToEquity",
          "normalisedScore": "10.0000",
          "rawValue": 0.18,
          "source": "fundamentals.debtToEquity",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "revenueCagr3y",
          "normalisedScore": "2.0000",
          "rawValue": 8,
          "source": "fundamentals.revenueCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "profitCagr3y",
          "normalisedScore": "2.8000",
          "rawValue": 10,
          "source": "fundamentals.profitCagr3y",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "opMarginTtm",
          "normalisedScore": "10.0000",
          "rawValue": 25,
          "source": "fundamentals.opMarginTtm",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "promoterPct",
          "normalisedScore": "9.0000",
          "rawValue": 50,
          "source": "shareholding.promoterPct",
          "weightWithinPillar": "0.1250",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctOfPromoter",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctOfPromoter",
          "weightWithinPillar": "0.1250",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "1.9338",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "valuation",
      "pillarScore": "4.4000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peTtm",
          "normalisedScore": "4.8000",
          "rawValue": 25,
          "source": "valuation.peTtm",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "pb",
          "normalisedScore": "3.6000",
          "rawValue": 4,
          "source": "valuation.pb",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "peg",
          "normalisedScore": "4.8000",
          "rawValue": 1.5,
          "source": "valuation.peg",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "evEbitda",
          "normalisedScore": "4.8000",
          "rawValue": 14,
          "source": "valuation.evEbitda",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "divYield",
          "normalisedScore": "4.0000",
          "rawValue": 1.2,
          "source": "valuation.divYield",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "0.8800",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "technical",
      "pillarScore": "8.9125",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma50",
          "normalisedScore": "8.0000",
          "rawValue": 2400,
          "source": "technical.sma50",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sma200",
          "normalisedScore": "10.0000",
          "rawValue": 2200,
          "source": "technical.sma200",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "rsi14",
          "normalisedScore": "8.7500",
          "rawValue": 55,
          "source": "technical.rsi14",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "macd",
          "normalisedScore": "10.0000",
          "rawValue": 1.2,
          "source": "technical.macd",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "bollinger",
          "normalisedScore": "10.0000",
          "rawValue": 2600,
          "source": "technical.bollinger",
          "weightWithinPillar": "0.1000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return1yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.05,
          "source": "technical.return1yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "return3yVsNifty",
          "normalisedScore": "8.0000",
          "rawValue": 0.1,
          "source": "technical.return3yVsNifty",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "beta",
          "normalisedScore": "0.0000",
          "rawValue": 1,
          "source": "technical.beta",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.2000",
      "weightedContribution": "1.7825",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "sentiment",
      "pillarScore": "4.5000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "last30dAggregate",
          "normalisedScore": "4.5000",
          "rawValue": 4.5,
          "source": "sentiment.last30dAggregate",
          "weightWithinPillar": "1.0000",
        },
        {
          "direction": "higher",
          "isAbsent": true,
          "isFallback": false,
          "name": "analystConsensus",
          "normalisedScore": "0.0000",
          "rawValue": null,
          "source": "sentiment.analystConsensus",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.4500",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk",
      "pillarScore": "2.3700",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "volatility1yAnnualised",
          "normalisedScore": "2.4000",
          "rawValue": 0.3,
          "source": "risk.volatility1yAnnualised",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "maxDrawdown1y",
          "normalisedScore": "2.0000",
          "rawValue": -0.25,
          "source": "risk.maxDrawdown1y",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "earningsConsistencyPct",
          "normalisedScore": "2.0000",
          "rawValue": 60,
          "source": "risk.earningsConsistencyPct",
          "weightWithinPillar": "0.2500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "auditQualifications",
          "normalisedScore": "5.0000",
          "rawValue": 1,
          "source": "risk.auditQualifications",
          "weightWithinPillar": "0.1500",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": true,
          "name": "pledgedPctTrend90d",
          "normalisedScore": "0.0000",
          "rawValue": 0,
          "source": "shareholding.pledgedPctTrend90d",
          "weightWithinPillar": "0.1000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.2370",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "event",
      "pillarScore": "8.6658",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnResults5",
          "normalisedScore": "8.0000",
          "rawValue": 1.5,
          "source": "event.meanAbsReturnResults5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnDividends5",
          "normalisedScore": "10.0000",
          "rawValue": 0.8,
          "source": "event.meanAbsReturnDividends5",
          "weightWithinPillar": "0.3333",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "meanAbsReturnSectorNews5",
          "normalisedScore": "8.0000",
          "rawValue": 1.2,
          "source": "event.meanAbsReturnSectorNews5",
          "weightWithinPillar": "0.3333",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.4333",
    },
  ],
  "score": 5.7,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;
